--- a/homepage.css
+++ b/homepage.css
@@ -1,3 +1,9 @@
  body {
-    background-color: rgb(24, 23, 23);
+    background-color: rgb(34, 32, 32);
     }
+
+.navbar-div {
+    background-color: rgb(61, 58, 58);
+    border-radius: 13px;
+    width: auto;
+}
